tests/cases/memory/errors/zone-pointer-after-loop-reset.ari
fn main() -> i64 {
  var zone = zone::create(64);
  let item = zone::new<i64>(ref mut zone, 5);
  var count = 0;
  while count < 1 {
    zone::reset(ref mut zone);
    count = count + 1;
  }
  let value = *item;
  zone::destroy(zone);
  value
}
